- Addressbook: Fixed problem with using the import dialog for the 2nd time.

18-07-2014 5.0.72
- Project in billing selectable for v1 and v2.
- Removed the ability to delete the items that are marked as default in the settings->synchronization tab.

17-07-2014 5.0.71
- Billing: Fixed sql problems with order when a project is attached and then projects2 isn't installed.
- Prevent timeout on module permission window
- Added new config option $config['files_disable_filesystem_sync']=true;
  The automatic sync can cause timeouts on large installations and should not be 
  required if you don't modify the filesystem externally.

16-07-2014 5.0.70
- 5MB limit on thumbnailer
- Addressbook: Changed maximum length of mailing subject from 100 chars to 255 chars.
- CardDav: 'comments' field of newly imported contact also shown in CardDav VCard.
- Brought back flash uploader runtime for older browsers because html4 was not working in IE8
- Added cellular2 to the emailtemplate predefined list.
- Billing: Changed projects support from projects to projects2
- Billing: Added fields to costcode so you can add a name and a description to it.

10-07-2014 5.0.69
- Updated Portugese-Brazil translation
- Fixed not working if conditions in e-mail templates
- Invalid calendar state that did not select own calendar on load
- Urlencode phone numbers in callto links

03-07-2014 5.0.68
- Size mismatch on debian repos

03-07-2014 5.0.67
- Broken message dialog in ticket system

02-07-2014 5.0.66
- Private events where shown in new calendar prints
- Moved file search index to separate cron job
- Ticket types will always sort by group name so groups wont show up double

12-06-2014 5.0.65
- Bug in checking user permission when sending mail

12-06-2014 5.0.64
- Forward messages that were attached fixed
- Touch parent and current folder when moving files and folders so refreshing won't sync with the filesystem. This improves performance.
- Updated Croatian translation